--- a/data/project.json
+++ b/data/project.json
@@ -1,6 +1,6 @@
 {
   "publish": {
-    "publish_pages_app": true,
+    "publish_pages_app": false,
     "publish_sha": "",
     "publish_iso_date": ""
   },
@@ -62,8 +62,8 @@
       ]
     },
     "created_at": "2025-04-29T14:12:59.840Z",
-    "updated_at": "2025-04-29T14:19:59.411Z",
-    "generate_pages_site": true
+    "updated_at": "2025-04-29T14:48:52.606Z",
+    "generate_pages_site": false
   },
   "annotations": {},
   "events": {},
