--- a/data/project.json
+++ b/data/project.json
@@ -1,6 +1,6 @@
 {
   "publish": {
-    "publish_pages_app": false,
+    "publish_pages_app": true,
     "publish_sha": "",
     "publish_iso_date": ""
   },
@@ -62,8 +62,8 @@
       ]
     },
     "created_at": "2025-04-29T14:12:59.840Z",
-    "updated_at": "2025-04-29T18:49:54.765Z",
-    "generate_pages_site": false
+    "updated_at": "2025-04-29T18:56:50.334Z",
+    "generate_pages_site": true
   },
   "annotations": {},
   "events": {},
